[gd_scene load_steps=17 format=3 uid="uid://cjxqex8nwxfk0"]

[ext_resource type="Texture2D" uid="uid://cnge7j38hewl1" path="res://assets/sprites/ui/starter-ui/starter-core-points.png" id="1_2hh8u"]
[ext_resource type="Script" path="res://scenes/tanks/starter-interface.gd" id="1_8pq04"]
[ext_resource type="Texture2D" uid="uid://dfxc72incxgji" path="res://assets/sprites/ui/starter-ui/starter-core-points-progress.png" id="2_3y0uk"]
[ext_resource type="Texture2D" uid="uid://cgyiu2ng00cjp" path="res://assets/sprites/ui/starter-ui/stat-wheel-progress-trail.png" id="3_cb3h1"]
[ext_resource type="Texture2D" uid="uid://24ocp888cr45" path="res://assets/sprites/ui/starter-ui/stat-wheel.png" id="3_dw501"]
[ext_resource type="Texture2D" uid="uid://5q63cgm3aynd" path="res://assets/sprites/circle-particle.png" id="4_6yajm"]
[ext_resource type="Texture2D" uid="uid://c2vstp2rvic5" path="res://assets/sprites/ui/starter-ui/stat-wheel-progress.png" id="4_jrmr1"]
[ext_resource type="Script" path="res://scripts/helper-components/Particle2D.gd" id="4_m645k"]
[ext_resource type="FontFile" uid="uid://cn7hc30kplvpo" path="res://assets/fonts/digital.otf" id="9_hjdot"]
[ext_resource type="Texture2D" uid="uid://dawy610qsbsyp" path="res://assets/sprites/ui/starter-ui/unpleasant-gradient.png" id="10_6rvnl"]

[sub_resource type="Curve" id="Curve_tnq5r"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_mtuiq"]
font = ExtResource("9_hjdot")
font_size = 33

[sub_resource type="Animation" id="Animation_iynmd"]
resource_name = "hide"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.07053, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-391, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.07, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(388, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Core:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 286)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowOverlay:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_icu2a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Core:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowOverlay:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1us12"]
resource_name = "show"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-391, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(388, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Core:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 286), Vector2(0, 8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShadowOverlay:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tpoov"]
_data = {
"RESET": SubResource("Animation_icu2a"),
"hide": SubResource("Animation_iynmd"),
"show": SubResource("Animation_1us12")
}

[node name="TankInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8pq04")

[node name="Health" type="Control" parent="."]
z_index = 15
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_group_ = true

[node name="HealthBarContainer" type="TextureProgressBar" parent="Health"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -365.0
offset_top = 460.0
offset_right = 215.0
offset_bottom = 1040.0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 100.0
fill_mode = 5
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_under = ExtResource("3_dw501")
texture_progress = ExtResource("4_jrmr1")
tint_progress = Color(0.33, 0, 0, 1)

[node name="HealthBar" type="TextureProgressBar" parent="Health"]
unique_name_in_owner = true
clip_children = 2
z_index = 5
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -365.0
offset_top = 460.0
offset_right = 215.0
offset_bottom = 1040.0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 100.0
fill_mode = 5
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("4_jrmr1")
tint_progress = Color(1, 0.271, 0.19, 1)

[node name="Particle2D" type="CPUParticles2D" parent="Health/HealthBar"]
position = Vector2(324.548, 469.038)
rotation = -1.5708
amount = 32
lifetime = 3.0
texture = ExtResource("4_6yajm")
emission_shape = 3
emission_rect_extents = Vector2(0, 100)
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 116.45
initial_velocity_max = 116.45
scale_amount_curve = SubResource("Curve_tnq5r")
color = Color(0.687425, 0, 0.142402, 1)
script = ExtResource("4_m645k")
permanent = true
autostart = true

[node name="HealthBarOffset" type="TextureProgressBar" parent="Health"]
unique_name_in_owner = true
z_index = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -365.0
offset_top = 460.0
offset_right = 215.0
offset_bottom = 1040.0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 15.0
fill_mode = 5
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("3_cb3h1")

[node name="Mana" type="Control" parent="."]
z_index = 15
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_group_ = true

[node name="ManaBar" type="TextureProgressBar" parent="Mana"]
unique_name_in_owner = true
clip_children = 2
z_index = 5
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1466.0
offset_top = 460.0
offset_right = 2046.0
offset_bottom = 1040.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 100.0
fill_mode = 4
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("4_jrmr1")
tint_progress = Color(0, 0.518554, 0.994809, 1)

[node name="Particle2D2" type="CPUParticles2D" parent="Mana/ManaBar"]
position = Vector2(232.667, 464.592)
rotation = -1.5708
amount = 32
lifetime = 3.0
texture = ExtResource("4_6yajm")
emission_shape = 3
emission_rect_extents = Vector2(0, 100)
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 116.45
initial_velocity_max = 116.45
scale_amount_curve = SubResource("Curve_tnq5r")
color = Color(0, 0.40433, 0.870489, 1)
script = ExtResource("4_m645k")
permanent = true
autostart = true

[node name="ManaBarOffset" type="TextureProgressBar" parent="Mana"]
unique_name_in_owner = true
z_index = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1466.0
offset_top = 460.0
offset_right = 2046.0
offset_bottom = 1040.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 60.0
fill_mode = 4
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("3_cb3h1")

[node name="ManaBarContainer" type="TextureProgressBar" parent="Mana"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1466.0
offset_top = 460.0
offset_right = 2046.0
offset_bottom = 1040.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.34957, 1.34957)
step = 0.1
value = 100.0
fill_mode = 4
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_under = ExtResource("3_dw501")
texture_progress = ExtResource("4_jrmr1")
tint_progress = Color(0, 0.250065, 0.503387, 1)

[node name="Core" type="Control" parent="."]
z_index = 15
anchors_preset = 0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 48.0
metadata/_edit_group_ = true

[node name="CorePointsContainer" type="TextureProgressBar" parent="Core"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 327.0
offset_top = 729.0
offset_right = 1562.0
offset_bottom = 1129.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.1725, 1.1725)
pivot_offset = Vector2(620.715, 223.085)
step = 0.1
fill_mode = 6
texture_under = ExtResource("1_2hh8u")

[node name="CoreBar" type="TextureProgressBar" parent="Core"]
unique_name_in_owner = true
z_index = 4
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 327.0
offset_top = 729.0
offset_right = 1562.0
offset_bottom = 1129.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.1725, 1.1725)
pivot_offset = Vector2(620.715, 223.085)
step = 0.1
value = 100.0
fill_mode = 6
texture_progress = ExtResource("2_3y0uk")
tint_progress = Color(0.904229, 0.490757, 0, 1)

[node name="PointsLeft" type="Label" parent="Core"]
unique_name_in_owner = true
modulate = Color(0.905882, 0.458824, 0, 1)
layout_mode = 0
offset_left = 526.0
offset_top = 918.0
offset_right = 747.0
offset_bottom = 973.0
scale = Vector2(1, 0.79919)
text = "1000 XP LEFT"
label_settings = SubResource("LabelSettings_mtuiq")
horizontal_alignment = 2
vertical_alignment = 3

[node name="TankName" type="Label" parent="Core"]
unique_name_in_owner = true
modulate = Color(0.905882, 0.458824, 0, 1)
layout_mode = 0
offset_left = 1176.0
offset_top = 918.0
offset_right = 1397.0
offset_bottom = 973.0
scale = Vector2(1, 0.79919)
text = "BILLY JOE"
label_settings = SubResource("LabelSettings_mtuiq")
vertical_alignment = 3

[node name="ShadowOverlay" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.67451)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -521.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_6rvnl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tpoov")
}
